package it.unibo.coffebreak.controller.handle;

public enum Action {
    RESUME,
    EXIT_GAME,
    PAUSE,
    MOVE_LEFT,
    MOVE_UP,
    MOVE_RIGHT
}
